# Stock-Market-Investment-Analyser-Predictor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analysis.py  app.py  jenkinsfile  main.py  newsFetch.py  output.txt  pyproject.toml  requirements.txt  ticker.py
api/: main.py
api/routes/: rnn_prediction.py  rnn_train_routes.py  stock_analysis.py
api/static/: script.js  style.css
api/templates/: index.html
artifacts/data_transformation/: transformed_data.pt
artifacts/model_trainer/: trained_model.pt
src/RNN_Price_prediction/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/RNN_Price_prediction/config/: config.yaml  configuration.py  params.yaml
src/RNN_Price_prediction/contants/: __init__.py
src/RNN_Price_prediction/data_access/: yaho_finance.py
src/RNN_Price_prediction/entity/: config_entity.py
src/RNN_Price_prediction/pipeline/: prediction_pipeline.py  training_pipeline.py
src/RNN_Price_prediction/tests/: __init__.py  ingestion_pipeline.py  prediction_pipeline_manual.py  run_pipeline.py  training_pipeline_manual.py  transformation_pipeline.py
src/Stock_Market/components/: stock_analysis.py
src/Stock_Market/constants/: __init__.py
src/Stock_Market/graphs/: builder.py
src/Stock_Market/llm/: llm_loader.py
src/Stock_Market/models/: state_model.py  structure_output.py
src/Stock_Market/nodes/: decider_node.py  llm_node.py  news_fetcher.py  responder_node.py  sentiment_analyser_node.py  tool_node.py
src/Stock_Market/pipelines/: run_pipeline.py
(+4 files in other folders)
